	* Better handling of adding "Sidebar Layout" selection to "Page Attributes" meta box on Edit Page screen, and improved security when saving.
	* Improved security for saving meta boxes using `Theme_Blvd_Meta_Box` class.
	* Improved security for saving options added to Edit Tag and Edit Category screens.
	* Improved security for saving options added to Edit Profile screen.
	* New filter `themeblvd_sidebar_args` added, which is shared with Theme Blvd Widget Areas plugin; this filters arguments passed to `register_sidebar()` for custom and theme widget areas.
	* Re-structured all admin JavaScript for better organization and efficiency.
	* Re-structured all admin CSS for better organization and efficiency.
	* Removed all "fancy selects" styling on admin UI select menus; we're now relying on default WordPress styling.
	* Added filter to remove frontend debug info from printing in source code; just filter `themeblvd_do_debug_info` to return `false`.
	* Added filter to remove admin framework welcome message; just filter `themeblvd_do_welcome_message` to `false`.
* Third-Party Plugin Compatibility
	* bbPress: "Lead Topic" enabled by default, with no more theme option to disable. Use filter `themeblvd_bbp_show_lead_topic` to disable.
	* bbPress: Added option to disable theme's bbPress styling at *Appearance > Theme Options > Plugins > bbPress*.
	* Gravity Forms: Added option to disable theme's Gravity Forms styling at *Appearance > Theme Options > Plugins > Gravity Forms*.
	* WooCommerce: Removed any legacy code for WooCommerce versions prior to 3.0.
	* WooCommerce: Added option to disable theme's Gravity Forms styling at *Appearance > Theme Options > Plugins > WooCommerce*.
	* WPML: Fixed WPML options showing on Theme Options, when WPML isn't installed.
* New: Added support for applying background shade to individual columns in the layout builder.
* New: Added option for disabling scroll effects at *Appearance > Theme Options > Content > General*.